Add multi-user capabilities
