# internal/server/providers/file.go
@@ -1,6 +1,7 @@
 package providers
 
 import (
+	"errors"
 	"fmt"
 	"os"
 
@@ -9,26 +10,72 @@ import (
 )
 
 type FileProvider struct {
+	Path string
 	Data FileData
 }
 type FileData struct {
-	User      api.User
+	User      map[string]api.User
 	Templates []api.RecordTemplate
-	Tasks     map[string]api.Job
+	Jobs      map[string]api.Job
 	Records   []api.Record
 }
 
-func (store *FileProvider) GetUser() (api.User, error) {
+func NewMemoryProvider() *FileProvider {
+	mem := FileProvider{}
+	mem.Data = FileData{
+		User:      map[string]api.User{},
+		Templates: []api.RecordTemplate{},
+		Jobs:      map[string]api.Job{},
+		Records:   []api.Record{},
+	}
+	return &mem
+}
+
+func (store *FileProvider) ListUsers() ([]api.User, error) {
 	data := store.load()
-	return data.User, nil
+	var ret []api.User
+
+	for _, user := range data.User {
+		ret = append(ret, user)
+	}
+	return ret, nil
+}
+
+func (store *FileProvider) GetUser(u api.User) (api.User, error) {
+	data := store.load()
+	for username, user := range data.User {
+		if username == u.Name {
+			return user, nil
+		}
+	}
+	return api.User{}, errors.New(string(ProviderErrorNotFound))
+}
+
+func (store *FileProvider) CreateUser(new api.User) (api.User, error) {
+	data := store.load()
+	for username := range data.User {
+		if username == new.Name {
+			return api.User{}, errors.New(string(ProviderErrorConflict))
+		}
+	}
+
+	data.User[new.Name] = new
+	store.store(data)
+	return new, nil
 }
 
 func (store *FileProvider) UpdateUser(new api.User) (api.User, error) {
 	data := store.load()
-	data.User = new
-	store.store(data)
+	for username, _ := range data.User {
+		if username == new.Name {
+			data.User[new.Name] = new
+			store.store(data)
 
-	return data.User, nil
+			return new, nil
+		}
+	}
+
+	return api.User{}, errors.New(string(ProviderErrorNotFound))
 }
 
 func (store *FileProvider) GetTemplates() ([]api.RecordTemplate, error) {
@@ -53,17 +100,17 @@ func (store *FileProvider) GetTemplate(name string) (api.RecordTemplate, error) 
 			return tmpl, nil
 		}
 	}
-	return api.RecordTemplate{}, fmt.Errorf("not found")
+	return api.RecordTemplate{}, errors.New(string(ProviderErrorNotFound))
 }
 
 func (store *FileProvider) CreateJob(t api.Job) (api.Job, error) {
 	data := store.load()
-	for name := range data.Tasks {
+	for name := range data.Jobs {
 		if name == t.Name {
-			return api.Job{}, fmt.Errorf("CONFLICT")
+			return api.Job{}, errors.New(string(ProviderErrorConflict))
 		}
 	}
-	data.Tasks[t.Name] = t
+	data.Jobs[t.Name] = t
 	store.store(data)
 	return t, nil
 }
@@ -71,7 +118,7 @@ func (store *FileProvider) CreateJob(t api.Job) (api.Job, error) {
 func (store *FileProvider) ListJobs() ([]api.Job, error) {
 	data := store.load()
 	taskList := []api.Job{}
-	for _, task := range data.Tasks {
+	for _, task := range data.Jobs {
 		taskList = append(taskList, task)
 	}
 
@@ -80,31 +127,43 @@ func (store *FileProvider) ListJobs() ([]api.Job, error) {
 
 func (store *FileProvider) GetJob(t api.Job) (api.Job, error) {
 	data := store.load()
-	for k, task := range data.Tasks {
-		if k == t.Name {
+	for _, task := range data.Jobs {
+		if task.Name == t.Name && task.Owner == t.Owner {
 			return task, nil
 		}
 	}
-	return api.Job{}, fmt.Errorf("NOT_FOUND")
+	return api.Job{}, errors.New(string(ProviderErrorNotFound))
 }
 
 func (store *FileProvider) UpdateJob(t api.Job) (api.Job, error) {
 	data := store.load()
-	data.Tasks[t.Name] = t
+	existing, ok := data.Jobs[t.Name]
+	if !ok {
+		return api.Job{}, errors.New(string(ProviderErrorNotFound))
+	}
+	if existing.Owner != t.Owner {
+		return api.Job{}, errors.New(string(ProviderErrorForbidden))
+	}
+
+	data.Jobs[t.Name] = t
 	store.store(data)
 	return t, nil
 }
 
 func (store *FileProvider) DeleteJob(t api.Job) (api.Job, error) {
 	data := store.load()
-	for _, existing_task := range data.Tasks {
+	for _, existing_task := range data.Jobs {
 		if existing_task.Name == t.Name {
-			delete(data.Tasks, existing_task.Name)
+			if existing_task.Owner != t.Owner {
+				return api.Job{}, errors.New(string(ProviderErrorForbidden))
+			}
+
+			delete(data.Jobs, existing_task.Name)
 			store.store(data)
 			return existing_task, nil
 		}
 	}
-	return api.Job{}, fmt.Errorf("NOT_FOUND")
+	return api.Job{}, errors.New(string(ProviderErrorNotFound))
 }
 
 func (store *FileProvider) SaveRecord(rec api.Record) (api.Record, error) {
@@ -114,10 +173,18 @@ func (store *FileProvider) SaveRecord(rec api.Record) (api.Record, error) {
 	return rec, nil
 }
 
-func (store *FileProvider) load() FileData {
-	var data FileData
+func (store *FileProvider) NotifyUser(event api.Event) error {
+	fmt.Printf("Event: %s/%s: %s\n", event.Target, event.Name, event.Message)
+	return nil
+}
 
-	content, err := os.ReadFile("db.yaml")
+func (store *FileProvider) load() FileData {
+	if store.Path == "" {
+		return store.Data
+	}
+
+	var data FileData
+	content, err := os.ReadFile(store.Path)
 	if err != nil {
 		fmt.Println(err)
 	}
@@ -130,11 +197,16 @@ func (store *FileProvider) load() FileData {
 
 }
 func (store *FileProvider) store(data FileData) {
+	if store.Path == "" {
+		store.Data = data
+		return
+	}
+
 	content, err := yaml.Marshal(data)
 	if err != nil {
 		fmt.Println(err)
 	}
-	err = os.WriteFile("db.yaml", content, os.ModeType)
+	err = os.WriteFile(store.Path, content, os.ModeType)
 	if err != nil {
 		fmt.Println(err)
 	}
